--- a/apicius-backend/package.json
+++ b/apicius-backend/package.json
@@ -23,6 +23,7 @@
     "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "punycode": "^2.3.1"
   }
 }
