--- a/apicius-backend/.env
+++ b/apicius-backend/.env
@@ -1,11 +1,22 @@
+# JWS
 JWT_SECRET=Anjodaguarda123!
 
+# Database
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=apicius_db
 DB_PASSWORD=azerty123
 DB_PORT=5433  # or 5432, depending on your setup
 
+# Firebase
+REACT_APP_FIREBASE_API_KEY=AIzaSyCRwp3hzQKDAhHfkLrI-wU7PfoyFJ6qTRI
+REACT_APP_FIREBASE_AUTH_DOMAIN=apicius05.firebaseapp.com  #Peut aussi être localhost
+REACT_APP_FIREBASE_PROJECT_ID=apicius05
+REACT_APP_FIREBASE_STORAGE_BUCKET=apicius05.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=798334228211
+REACT_APP_FIREBASE_APP_ID=1:798334228211:web:662352443d22c35ffec986
+REACT_APP_MEASUREMENT_ID=G-XW4Y9NWGH5
+
+# Nodemailer
 EMAIL=elixirquintessence@gmail.com
 EMAIL_PASSWORD=kgqh uccq ktxb dfpk
-
