--- a/apicius-backend/.env
+++ b/apicius-backend/.env
@@ -20,3 +20,6 @@ REACT_APP_MEASUREMENT_ID=G-XW4Y9NWGH5
 # Nodemailer
 EMAIL=elixirquintessence@gmail.com
 EMAIL_PASSWORD=kgqh uccq ktxb dfpk
+
+# Test
+NODE_ENV=test
