--- a/apicius-backend/package.json
+++ b/apicius-backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -25,5 +25,9 @@
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "punycode": "^2.3.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
