--- a/apicius-frontend/package.json
+++ b/apicius-frontend/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.3",
+    "react-world-flags": "^1.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
