--- a/apicius-frontend/package.json
+++ b/apicius-frontend/package.json
@@ -10,9 +10,11 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.0.1",
     "google-auth-library": "^9.14.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
