--- a/apicius-backend/.env
+++ b/apicius-backend/.env
@@ -21,5 +21,5 @@ REACT_APP_MEASUREMENT_ID=G-XW4Y9NWGH5
 EMAIL=elixirquintessence@gmail.com
 EMAIL_PASSWORD=kgqh uccq ktxb dfpk
 
-# Test
-NODE_ENV=test
+# Dev
+NODE_ENV=development
