--- a/apicius-backend/package.json
+++ b/apicius-backend/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.1",
     "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "punycode": "^2.3.1",
