--- a/apicius-frontend/package.json
+++ b/apicius-frontend/package.json
@@ -12,6 +12,7 @@
     "google-auth-library": "^9.14.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "rc-select": "^14.16.4",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
