--- a/apicius-backend/package.json
+++ b/apicius-backend/package.json
@@ -21,6 +21,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
