--- a/apicius-frontend/package.json
+++ b/apicius-frontend/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
-    "firebase": "^11.0.2",
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "google-auth-library": "^9.14.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
@@ -20,7 +21,7 @@
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.8.3",
     "react-world-flags": "^1.6.0",
     "web-vitals": "^2.1.4"
