--- a/apicius-backend/package.json
+++ b/apicius-backend/package.json
@@ -30,7 +30,8 @@
     "pg": "^8.13.1",
     "punycode": "^2.3.1",
     "react-select": "^5.8.3",
-    "react-world-flags": "^1.6.0"
+    "react-world-flags": "^1.6.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "jest": "^29.7.0",
