--- a/apicius-backend/package.json
+++ b/apicius-backend/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "punycode": "^2.3.1",
+    "react-query": "^3.39.3",
     "react-select": "^5.8.3",
     "react-world-flags": "^1.6.0",
     "xlsx": "^0.18.5"
