--- a/apicius-backend/.env
+++ b/apicius-backend/.env
@@ -35,3 +35,7 @@ EMAIL_PASSWORD=kgqh uccq ktxb dfpk
 
 # Dev
 NODE_ENV=development
+
+# AI
+GROQ_API_KEY=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
+PORT=5010
