--- a/apicius-backend/package.json
+++ b/apicius-backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.13.5",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
@@ -32,7 +33,8 @@
     "react-query": "^3.39.3",
     "react-select": "^5.8.3",
     "react-world-flags": "^1.6.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
