--- a/apicius-backend/.env
+++ b/apicius-backend/.env
@@ -39,3 +39,4 @@ NODE_ENV=development
 # AI
 GROQ_API_KEY=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
 PORT=5010
+ASSEMBLYAI_API_KEY=e66a8c31e12042c8b3f589c05663d276
