--- a/apicius-backend/.env
+++ b/apicius-backend/.env
@@ -6,7 +6,7 @@ DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=apicius_db
 DB_PASSWORD=azerty123
-DB_PORT=5433  # or 5432, depending on your setup
+DB_PORT=5433  
 
 # Firebase
 FIREBASE_API_KEY=AIzaSyCRwp3hzQKDAhHfkLrI-wU7PfoyFJ6qTRI
