--- a/apicius-backend/package.json
+++ b/apicius-backend/package.json
@@ -20,7 +20,7 @@
     "cors": "^2.8.5",
     "cros": "^1.0.1",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "express": "^4.21.1",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
@@ -35,7 +35,8 @@
     "react-world-flags": "^1.6.0",
     "xlsx": "^0.18.5",
     "youtube-transcript": "^1.2.1",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "jest": "^29.7.0",
