--- a/apicius-backend/package.json
+++ b/apicius-backend/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "punycode": "^2.3.1",
+    "puppeteer": "^24.37.5",
     "react-query": "^3.39.3",
     "react-select": "^5.8.3",
     "react-world-flags": "^1.6.0",
